--- a/static/css/NISTStyle.css
+++ b/static/css/NISTStyle.css
@@ -13,7 +13,8 @@
 }
 
 body{
-	margin:0
+	margin:0;
+	padding:25px
 }
 
 article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{
