--- a/_includes/NISTPagesHeader.html
+++ b/_includes/NISTPagesHeader.html
@@ -1,7 +1,7 @@
 <header class="nist-header">
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>NIST Pages Template</title>
+	<title>NIST Pages</title>
 	<meta name="viewport" content="width=device-width">
 	<meta name="description" content="{{ site.description }}">
 	<link rel="canonical" href="{{ site.rooturl }}{{ page.url }}">
@@ -10,7 +10,7 @@
 	<!-- Google Analytics -->
 	<!--<script type="text/javascript" id="_fed_an_js_tag" src="http://www.nist.gov/js/federated-analytics.all.min.js?agency=NIST&subagency=mml&pua=UA-66610693-1&yt=true&exts=ppsx,pps,f90,sch,rtf,wrl,txz,m1v,xlsm,msi,xsd,f,tif,eps,mpg,xml,pl,xlt,c"></script> -->
 	<!-- DAP Analytics -->
-	<script type="text/javascript" id="_fed_an_ua_tag" src="https://dap.digitalgov.gov/Universal-Federated-Analytics-Min.js?agency=DOC&subagency=NIST&pua=UA-66610693-1&yt=true&exts=ppsx,pps,f90,sch,rtf,wrl,txz,m1v,xlsm,msi,xsd,f,tif,eps,mpg,xml,pl,xlt,c"></script>
+	<!--<script type="text/javascript" id="_fed_an_ua_tag" src="https://dap.digitalgov.gov/Universal-Federated-Analytics-Min.js?agency=DOC&subagency=NIST&pua=UA-66610693-1&yt=true&exts=ppsx,pps,f90,sch,rtf,wrl,txz,m1v,xlsm,msi,xsd,f,tif,eps,mpg,xml,pl,xlt,c"></script> -->
 
 	<!-- Custom CSS -->
 	<link rel="stylesheet" href="{{ site.baseurl }}/static/css/NISTStyle.css">
