--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,12 +9,13 @@
 <body>
  
   {{ content }}
-  <footer role="contentInfo" class="site-footer">
+<!--  <footer role="contentInfo" class="site-footer">
     <div class="section-container">
       <div class="section-content">     
       </div>
     </div>
   </footer>
+-->
  
 {% include NISTPagesFooter.html %}
 </body>
