--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,7 @@
       <div class="section-content">     
       </div>
     </div>
-  </footer>
--->
+  </footer> -->
  
 {% include NISTPagesFooter.html %}
 </body>
