Test switch to nist-header header package

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!--
---> 
+{% comment %}
 {% include NISTPagesHeader.html %}
-
+{% endcomment %}
+<link rel="stylesheet" href="https://pages.nist.gov/nist-header/css/nist_fonts.css">
+<link rel="stylesheet" href="https://pages.nist.gov/nist-header/css/nist_header.css">
+<script src="https://pages.nist.gov/nist-header/js/jquery-1.9.0.min.js" type="text/javascript" defer="defer"></script>
+<script src="https://pages.nist.gov/nist-header/js/nist-header.js" type="text/javascript" defer="defer"></script>
 </head>
 <body>
  
-  {{ content }}
-<!--  <footer role="contentInfo" class="site-footer">
-    <div class="section-container">
-      <div class="section-content">     
-      </div>
-    </div>
-  </footer> -->
- 
+{{ content }}
+
+{% comment %}
 {% include NISTPagesFooter.html %}
+{% endcomment %}
 </body>
 </html>
