More header switchover

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,10 +4,11 @@
 {% comment %}
 {% include NISTPagesHeader.html %}
 {% endcomment %}
-<link rel="stylesheet" href="https://pages.nist.gov/nist-header/css/nist_fonts.css">
-<link rel="stylesheet" href="https://pages.nist.gov/nist-header/css/nist_header.css">
-<script src="https://pages.nist.gov/nist-header/js/jquery-1.9.0.min.js" type="text/javascript" defer="defer"></script>
-<script src="https://pages.nist.gov/nist-header/js/nist-header.js" type="text/javascript" defer="defer"></script>
+<link rel="stylesheet" href="/nist-header/css/nist_fonts.css">
+<link rel="stylesheet" href="/nist-header/css/nist_header.css">
+<link rel="stylesheet" href="/nist-header/static/css/NISTStyle.css">
+<script src="/nist-header/js/jquery-1.9.0.min.js" type="text/javascript" defer="defer"></script>
+<script src="/nist-header/js/nist-header.js" type="text/javascript" defer="defer"></script>
 </head>
 <body>
  
