--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 {% endcomment %}
 <link rel="stylesheet" href="/nist-header/css/nist_fonts.css">
 <link rel="stylesheet" href="/nist-header/css/nist_header.css">
-<link rel="stylesheet" href="/nist-header/static/css/NISTStyle.css">
+<link rel="stylesheet" href="static/css/NISTStyle.css">
 <script src="/nist-header/js/jquery-1.9.0.min.js" type="text/javascript" defer="defer"></script>
 <script src="/nist-header/js/nist-header.js" type="text/javascript" defer="defer"></script>
 </head>
