Put NISTStyle.css back, still used

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="static/css/NISTStyle.css">
 <link rel="stylesheet" href="/nist-header-footer/css/nist-combined.css">
 <script src="/nist-header-footer/js/jquery-1.9.0.min.js" type="text/javascript" defer="defer"></script>
 <script src="/nist-header-footer/js/nist-header-footer.js" type="text/javascript" defer="defer"></script>
