--- a/_includes/NISTPagesHeader.html
+++ b/_includes/NISTPagesHeader.html
@@ -8,7 +8,7 @@
 	<link rel="shortcut icon" href="/favicon.ico">
 
 	<!-- Google Analytics -->
-	<!--<script type="text/javascript" id="_fed_an_js_tag" src="http://www.nist.gov/js/federated-analytics.all.min.js?agency=NIST&subagency=mml&pua=UA-66610693-1&yt=true&exts=ppsx,pps,f90,sch,rtf,wrl,txz,m1v,xlsm,msi,xsd,f,tif,eps,mpg,xml,pl,xlt,c"></script> -->
+	<!--<script type="text/javascript" id="_fed_an_js_tag" src="https://www.nist.gov/js/federated-analytics.all.min.js?agency=NIST&subagency=mml&pua=UA-66610693-1&yt=true&exts=ppsx,pps,f90,sch,rtf,wrl,txz,m1v,xlsm,msi,xsd,f,tif,eps,mpg,xml,pl,xlt,c"></script> -->
 	<!-- DAP Analytics -->
 	<!--<script type="text/javascript" id="_fed_an_ua_tag" src="https://dap.digitalgov.gov/Universal-Federated-Analytics-Min.js?agency=DOC&subagency=NIST&pua=UA-66610693-1&yt=true&exts=ppsx,pps,f90,sch,rtf,wrl,txz,m1v,xlsm,msi,xsd,f,tif,eps,mpg,xml,pl,xlt,c"></script> -->
 
@@ -17,18 +17,18 @@
 	<link rel="stylesheet" href="{{ site.baseurl }}/static/css/NISTPages.css">
 
 	<h1>
-	  <a class="nist-logo" target="_blank" href="http://www.nist.gov/" title="Go to nist.gov">National Institute of Standards and Technology</a>
+	  <a class="nist-logo" target="_blank" href="https://www.nist.gov/" title="Go to nist.gov">National Institute of Standards and Technology</a>
 	</h1>
 	<div class="nist-links">
-	  <a class="nist-links-button" target="_blank" href="http://www.nist.gov">NIST Website</a>
-	  <a class="nist-links-button mobile-hide" target="_blank" href="http://www.nist.gov/public_affairs/nandyou.cfm">About NIST</a>
+	  <a class="nist-links-button" target="_blank" href="https://www.nist.gov">NIST Website</a>
+	  <a class="nist-links-button mobile-hide" target="_blank" href="https://www.nist.gov/about-nist">About NIST</a>
 	  <a class="nist-links-button mobile-hide" target="_blank" href="https://github.com/usnistgov">usnistgov on GitHub</a>
 	</div>
 	
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
 	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+		<script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 	<![endif]-->
 </header>
