--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-<link rel="stylesheet" href="static/css/NISTStyle.css">
-<link rel="stylesheet" href="/nist-header-footer/css/nist-combined.css">
-<script src="/nist-header-footer/js/jquery-1.9.0.min.js" type="text/javascript" defer="defer"></script>
-<script src="/nist-header-footer/js/nist-header-footer.js" type="text/javascript" defer="defer"></script>
-</head>
-<body>
-{{ content }}
-</body>
+ <head>
+  <link rel="stylesheet" href="static/css/NISTStyle.css">
+  <link rel="stylesheet" href="/nist-header-footer/css/nist-combined.css">
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.1.min.js" defer="defer"></script>
+  <script type="text/javascript" src="/nist-header-footer/js/nist-header-footer.js" defer="defer"></script>
+ </head>
+ <body>
+  {{ content }}
+ </body>
 </html>
