Add DataTable to repolist table

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,5 +10,10 @@
  </head>
  <body>
   {{ content }}
+  <script type="text/javascript">
+   $(document).ready(function () {
+    $('#table-striped').DataTable();
+   });
+  </script>
  </body>
 </html>
