Use a table id instead of a class

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
   <scrypt type="text/javascript" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
   <script type="text/javascript">
    $(document).ready(function () {
-    $('#table-striped').DataTable();
+    $('#repotable').DataTable();
    });
   </script>
  </head>
