--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,14 +6,14 @@
   <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css">
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
   <script type="text/javascript" src="/nist-header-footer/js/nist-header-footer.js"></script>
-  <scrypt type="text/javascript" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
- </head>
- <body>
-  {{ content }}
+  <script type="text/javascript" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
   <script type="text/javascript">
    $(document).ready(function () {
     $('#repotable').DataTable();
    });
   </script>
+ </head>
+ <body>
+  {{ content }}
  </body>
 </html>
