Reduce section vertical padding

--- a/static/css/NISTStyle.css
+++ b/static/css/NISTStyle.css
@@ -17,7 +17,7 @@ body{
 }
 
 section{
-	padding:50px
+	padding:50px 20px
 }
 
 article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{
