--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,13 +9,12 @@
   <script type="text/javascript" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
   <script type="text/javascript" src="https://cdn.datatables.net/buttons/2.2.3/js/dataTables.buttons.min.js"></script>
   <script type="text/javascript" src="https://cdn.datatables.net/buttons/2.2.3/js/buttons.print.min.js"></script>
-  <script type="text/javascript" src="https://cdn.datatables.net/buttons/2.2.3/js/buttons.pdf.min.js"></script>
   <script type="text/javascript">
    $(document).ready(function () {
     $('#repotable').DataTable({
      dom: 'Bfrtip',
      buttons: [
-      'print', 'pdf'
+      'print'
      ]
     });
    });
