Change generic message on top of print page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,10 @@
     $('#repotable').DataTable({
      dom: 'Bfrtip',
      buttons: [
-      'print'
+      {
+       extend: 'print',
+       message: 'NIST Pages Table of Contents'
+      }
      ]
     });
    });
