Trying to find correct print option to change

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
      buttons: [
       {
        extend: 'print',
-       message: 'NIST Pages Table of Contents'
+       title: 'NIST Pages Table of Contents'
       }
      ]
     });
