Add page length menu back in

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
   <script type="text/javascript">
    $(document).ready(function () {
     $('#repotable').DataTable({
-     dom: 'Bfrtip',
+     dom: 'Bfrtilp',
      buttons: [
       {
        extend: 'print',
