--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
   <script type="text/javascript">
    $(document).ready(function () {
     $('#repotable').DataTable({
-     dom: '<B><lf<t>ip>',
+     dom: '<"top"iB>t<"bottom"flp><"clear">',
      buttons: [
       {
        extend: 'print',
