Comment out print button, too ugly

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,13 +12,13 @@
   <script type="text/javascript">
    $(document).ready(function () {
     $('#repotable').DataTable({
-     dom: '<"top"iB>t<"bottom"flp><"clear">',
-     buttons: [
-      {
-       extend: 'print',
-       title: 'NIST Pages Table of Contents'
-      }
-     ]
+//     dom: '<"top"iB>t<"bottom"flp><"clear">',
+//     buttons: [
+//      {
+//       extend: 'print',
+//       title: 'NIST Pages Table of Contents'
+//      }
+//     ]
     });
    });
   </script>
