Comment out print button plugins

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,8 @@
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
   <script type="text/javascript" src="/nist-header-footer/js/nist-header-footer.js"></script>
   <script type="text/javascript" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
-  <script type="text/javascript" src="https://cdn.datatables.net/buttons/2.2.3/js/dataTables.buttons.min.js"></script>
-  <script type="text/javascript" src="https://cdn.datatables.net/buttons/2.2.3/js/buttons.print.min.js"></script>
+  <!--script type="text/javascript" src="https://cdn.datatables.net/buttons/2.2.3/js/dataTables.buttons.min.js"></script-->
+  <!--script type="text/javascript" src="https://cdn.datatables.net/buttons/2.2.3/js/buttons.print.min.js"></script-->
   <script type="text/javascript">
    $(document).ready(function () {
     $('#repotable').DataTable({
